--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,28 @@
     <string name="previous">Previous</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings used for settings -->
+    <string name="sync_pref">Copia de Seguridad</string>
+    <string name="sync_pref_summary">Todas las notas serán copiadas a  un almacenamiento externo</string>
+    <string name="pref_syncConnectionType">Tipo de Conexión</string>
+    <string name="pref_syncConnectionType_dialog_title">Elige la conexión</string>
+    <string name="pref_syncConnectionType_default_value">WiFi</string>
+    <string name="pref_syncConnectionType_summary">WiFi o Datos Móviles</string>
+
+    <string-array name="pref_syncConnectionType_entries">
+        <item>WiFi</item>
+        <item>Datos Móviles</item>
+        <item>WiFi/Datos Móviles</item>
+    </string-array>
+
+    <string-array name="pref_syncConnectionType_values">
+        <item>WiFi</item>
+        <item>Móvil</item>
+        <item>WiFi_Móvil</item>
+    </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
