--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="pref_syncConnectionType">Tipo de Conexión</string>
     <string name="pref_syncConnectionType_dialog_title">Elige la conexión</string>
     <string name="pref_syncConnectionType_default_value">WiFi</string>
-    <string name="pref_syncConnectionType_summary">WiFi o Datos Móviles</string>
+    <string name="pref_syncConnectionType_summary">Elige el tipo de conexión para hacer las copias de seguridad</string>
 
     <string-array name="pref_syncConnectionType_entries">
         <item>WiFi</item>
@@ -40,8 +40,8 @@
 
     <string-array name="pref_syncConnectionType_values">
         <item>WiFi</item>
-        <item>Móvil</item>
-        <item>WiFi_Móvil</item>
+        <item>Datos Móviles</item>
+        <item>WiFi/Datos Móviles</item>
     </string-array>
 
     <!-- TODO: Remove or change this placeholder text -->
